night's final commit

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       </div>
       <div id="download-page">
         <div class="cover shadow-lg">
+
+          <!--------------------------------------Personal Details Section ---------------------------------------->
           <div class="edit-personal-details">
             <div class="position-relative personal-information-div-wrapper" style="cursor: pointer;">
 
@@ -82,10 +84,10 @@
                           <h6 class="pb-3">Contact No.</h6>
                           <h6 class="pb-4">Email :</h6>
                           <h6 class="pb-3">Address</h6>
-                          <h6 class="pb-3">City</h6>
+                          <h6 class="pb-3 city-line">City</h6>
                           <h6 class="pb-3">State</h6>
                           <h6 class="pb-3">Pincode</h6>
-                          <h6>Country</h6>
+                          <h6 class="pt-sm-1">Country</h6>
                         </div>
                         <div class="col-6 ps-md-0 ps-0 col-md-6 col-lg-6 col-sm-6">
                           <p>9876543210</p>
@@ -109,47 +111,8 @@
           </div>
           <hr />
 
-          <div id="education-div" class="px-3 px-sm-4 px-lg-4">
-            <div class="d-flex justify-content-center align-items-center">
-              <h3 class="mb-4 h3">Skills</h3>
-            </div>
-            <div class="row">
-              <div class="col-12 col-md-6 col-lg-6 col-sm-12">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
-                  esse id, quas quibusdam iste repellat consequatur dolorum,
-                  assumenda eius molestias unde inventore, quam tempora tempore
-                  reiciendis impedit. Cum, odit obcaecati. Exercitationem porro
-                  autem illo quas, magni maxime ea obcaecati possimus vero totam
-                  repellendus necessitatibus, explicabo itaque architecto,
-                  molestias cum tempora modi perferendis delectus inventore quia
-                  dolor excepturi? Et, unde culpa? Illum aliquam ab corrupti,
-                  perferendis quibusdam quas iste amet quasi beatae atque modi
-                  quo aliquid reprehenderit assumenda, sunt culpa at quidem
-                  nostrum unde saepe sed! Neque quisquam natus maxime iusto!
-                </p>
-              </div>
-              <div class="col-12 col-md-6 col-lg-6 col-sm-12">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
-                  ratione quae harum dolores accusantium totam fuga ullam!
-                  Maiores, officia adipisci aspernatur consectetur, natus error
-                  inventore quo mollitia, unde exercitationem incidunt? Quos,
-                  quo sint! At deserunt cumque molestias corrupti, dolorem
-                  distinctio illo aperiam reiciendis nesciunt ad esse quaerat
-                  ab. Debitis id fugiat autem unde eius odio amet nulla iste
-                  dolorem temporibus? Nulla totam nihil nam nobis ipsa est
-                  cumque illum reprehenderit culpa debitis. Praesentium aperiam
-                  tempora sint natus quas excepturi delectus fugiat laudantium
-                  blanditiis! Eaque repellat fugit quaerat, amet mollitia
-                  quidem!
-                </p>
-              </div>
-            </div>
-          </div>
-          <hr />
-
-          <div id="work-experience-div">
+          <!------------------------------------------------ Education Section ------------------------------------------------>
+          <div id="education-div">
             <div class="d-flex justify-content-center align-items-center">
               <h3>Education</h3>
             </div>
@@ -207,6 +170,56 @@
           </div>
           <hr />
 
+          <!-------------------------------------------------- Skills Section----------------------------------------------->
+
+          <div id="skills-div" class="px-3 px-sm-4 px-lg-4">
+            <div class="d-flex justify-content-center align-items-center">
+              <h3 class="mb-4 h3">Skills</h3>
+            </div>
+            <div class="container bootstrap snippets bootdeys">
+              <div class="row">
+                <div class="col-md-6 col-sm-12 content-card">
+                  <div class="card-big-shadow">
+                    <div class="card card-just-text" data-background="color" data-color="grey" data-radius="none">
+                      <div class="content">
+                        <h4 class="title">Hard Skills</h4>
+                        <p class="description">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet architecto eius optio voluptatum
+                          illum quidem deserunt reiciendis facilis nostrum temporibus. Repellat provident saepe rem
+                          impedit distinctio voluptatem non magnam numquam?
+                          Deserunt quam dignissimos delectus magni voluptatum a sequi corporis molestias nulla, ratione
+                          libero! Qui dolor ad sed adipisci iure possimus blanditiis, molestiae magnam inventore
+                          cupiditate, dolore enim autem, obcaecati assumenda!
+                        </p>
+                      </div>
+                    </div> <!-- end card -->
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-sm-12 content-card">
+                  <div class="card-big-shadow">
+                    <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                      <div class="content">
+                        <h4 class="title">Soft Skills</h4>
+                        <p class="description">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet architecto eius optio voluptatum
+                          illum quidem deserunt reiciendis facilis nostrum temporibus. Repellat provident saepe rem
+                          impedit distinctio voluptatem non magnam numquam?
+                          Deserunt quam dignissimos delectus magni voluptatum a sequi corporis molestias nulla, ratione
+                          libero! Qui dolor ad sed adipisci iure possimus blanditiis, molestiae magnam inventore
+                          cupiditate, dolore enim autem, obcaecati assumenda!
+                        </p>
+                      </div>
+                    </div> <!-- end card -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <!------------------------------------------- Publications Section  ----------------------------------------->
+
           <div id="publications" class="px-3 px-sm-4 px-lg-4">
             <div class="d-flex justify-content-center align-items-center">
               <h3 class="mb-4 h3">Publications</h3>
@@ -232,6 +245,7 @@
 
           <hr />
 
+          <!------------------------------------------- Research Section  ----------------------------------------->
           <div id="research" class="px-3 px-sm-4 px-lg-4">
             <div class="d-flex justify-content-center align-items-center">
               <h3 class="mb-4 pt-2 h3">Research</h3>
@@ -333,8 +347,8 @@
           <div class="container">
             <div id="left-second-row" class="row">
               <div id="gender-row" class="col-md-4 ">
-                <label for="male">Male</label>
                 <input style="height: auto ;" type="radio" name="gender" id="male" />
+                <label for="male">Male</label>
                 <label for="female">Female</label>
                 <input style="height: auto ;" type="radio" name="gender" id="female" />
                 <label for="other">other</label>
@@ -429,7 +443,7 @@
           </div>
           <div class="d-flex justify-content-center">
             <button id="personal-details-cancel-button" class="btn btn-danger m-4">Cancel</button>
-            <button class="btn btn-success m-4">Submit</button>
+            <button id="personal-details-submit-button" class="btn btn-success m-4">Submit</button>
           </div>
 
         </div>
@@ -548,11 +562,12 @@
         $('.edit_icon').addClass('d-none')
         $('.personal-information-div').removeClass('personal-information-div-hover')
 
-
       })
       $('.edit_icon').on('mouseover', function () {
         $('.personal-information-div').addClass('personal-information-div-hover')
       })
+
+
 
       $(document).on('click', '.edit-personal-details', function () {
         console.log("ENtered")
@@ -565,15 +580,15 @@
 
 
       $('#personal-details-cancel-button').click(function () {
-        $('#fade-wrapper').fadeOut();
+        $('.personal-details-modal').fadeOut();
         $('#body').css('display', 'block')
 
       });
 
 
-       
+
       $(document).on('click', '#work-experience-add-button', function () {
-            let table = ` <tr data-toggle="collapse" class="collapsed">
+        let table = ` <tr data-toggle="collapse" class="collapsed">
         <td><input class="form-control" type="text"></td>
         <td><input class="form-control" type="text"></td>
         <td><input class="form-control" type="text"></td>
@@ -583,14 +598,14 @@
         <td class="p-2 !important"><i class="fa-solid fa-trash-can text-white h4" id="work-experience-delete-button"></i></td>
         </tr>
        `
-            $('#table-data').append(table);
-        })
-        $(document).on('click', '#work-experience-delete-button', function () {
-            $(this).closest('tr').remove()
-        })
+        $('#table-data').append(table);
+      })
+      $(document).on('click', '#work-experience-delete-button', function () {
+        $(this).closest('tr').remove()
+      })
 
 
-        
+
       $(document).on('click', '#work-experience-div', function () {
         console.log("ENtered")
         $('#body').css('display', 'none')
@@ -600,9 +615,8 @@
 
       })
 
-
       $('#personal-details-cancel-button').click(function () {
-        $('#fade-wrapper').fadeOut();
+        $('.work-experience-div').fadeOut();
         $('#body').css('display', 'block')
 
       });
