--- a/newForm.html
+++ b/newForm.html
@@ -20,7 +20,7 @@
 <body>
 
 
-    <div class="personal-details-modal" id="bank-form-area">
+    <div id="bank-form-area">
 
         <div class="container">
             <div class="d-flex justify-content-center align-items-center my-4">
