--- a/skills.html
+++ b/skills.html
@@ -9,143 +9,176 @@
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
 <link rel="preload" as="style"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
-<link rel="preload" href="https://builder.zety.com/resume/build/rwzv2/main.bundle-1.0.0.503.js" as="script">
 <link rel="stylesheet" href="./skills.css" />
 
 <body>
 
-    <div id="skill-div">
-        <div class="container">
-            <div class="row">
-                <div id="left-skill-section" class="col-md-6 col-sm-12">
-                    <ul>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="row">
-                                <div class="col-md-2"><button class="btn btn-success">Add</button></div>
-                                <div class="col-md-10">Skills</div>
-                            </div>
-                        </li>
+    <div id="skill-box" class="container">
+        <input type="text" id="skill-search"
+            placeholder="Search for names.." class="form-control" title="Type in a name">
+        <div class="row">
+            <div id="left-skill-box" class="col-md-6 col-sm-12">
+
+                <ul id="myUL">
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">Skill1</a></div>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <div id="right-skill-box">
+                    <ul id="skill-display">
+
                     </ul>
                 </div>
 
-                
-                <div id="right-skill-section" class="col-md-6 col-sm-12"></div>
             </div>
+
         </div>
     </div>
 
+
+    <script>
+        let skillSearchButton = document.getElementById('skill-search')
+        skillSearchButton.addEventListener('keyup', function myFunction() {
+            // Declare variables
+            var input, filter, ul, li, a, i, txtValue;
+
+            input = document.getElementById('skill-search');
+            filter = input.value.toUpperCase();
+            ul = document.getElementById("myUL");
+            li = ul.getElementsByTagName('li');
+
+            // Loop through all list items, and hide those who don't match the search query
+            for (i = 0; i < li.length; i++) {
+                a = li[i].getElementsByTagName("a")[0];
+                txtValue = a.textContent || a.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
+        })
+
+        let addSkillButton = document.getElementsByClassName('skill-add-button')
+        let skillDisplay = document.getElementById('skill-display')
+
+        for (let i = 0; i < addSkillButton.length; i++) {
+            addSkillButton[i].addEventListener('click', function () {
+
+                let text = addSkillButton[i].nextElementSibling.innerText;
+                let div = ` 
+                    <li>
+                        <div class="row">
+                            <div class="col-md-2 skill-add-button"><i class="fa-solid fa-circle-plus fa-2x"></i></div>
+                            <div class="col-md-10"><a href="#">${text}</a></div>
+                        </div>
+                    </li>
+                
+                `
+                skillDisplay.insertAdjacentHTML('afterend', div)
+                addSkillButton[i].parentElement.parentElement.setAttribute('style', 'display:none')
+            })
+        }
+    </script>
 </body>
 
 </html>
