--- a/achievement.html
+++ b/achievement.html
@@ -31,11 +31,7 @@
                     <thead class="text-white">
                       <tr class="table-head">
                         <th>Type</th>
-                        <th>Achievement name</th>
-                        <th>Organisation</th>
-                        <th>Organisation type</th>
-                        <th>Place</th>
-                        <th>Achievement date</th>
+                        <th>Achievement name</th>th>Achievement date</th>
                         <th>Certificate</th>
                         <th>Action</th>
                       </tr>
